@@ -1,4 +1,4 @@
-DOS2UNIX_VERSION = 7.3
-DOS2UNIX_VERSION_SHORT = 73
-DOS2UNIX_DATE = 2015-08-24
+DOS2UNIX_VERSION = 7.3.1-beta1
+DOS2UNIX_VERSION_SHORT = 73b1
+DOS2UNIX_DATE = 2015-08-26
 DOS2UNIX_AUTHOR = 'Erwin Waterlander'
